Change overflow property to 'hidden' for dashboard windows, this stops very long tags from messing up the display

--- a/htdocs/styles/webtrack.css
+++ b/htdocs/styles/webtrack.css
@@ -116,6 +116,7 @@ div.window
 {
     max-width: 380px;
     padding: 3px;
+    overflow: hidden;
 }
 
 #apptitle { height: 50px;}
